--- a/font-awesome-4.1.0/css/font-awesome.css
+++ b/font-awesome-4.1.0/css/font-awesome.css
@@ -554,7 +554,7 @@
 .fa-bar-chart-o:before {
   content: "\f080";
 }
-.fa-twitter-square:before {
+.fa-facebook-square:before {
   content: "\f081";
 }
 .fa-facebook-square:before {
@@ -624,7 +624,7 @@
 .fa-phone-square:before {
   content: "\f098";
 }
-.fa-twitter:before {
+.fa-facebook:before {
   content: "\f099";
 }
 .fa-facebook:before {
